# class

./: .gitignore  README.md  pyproject.toml
src/: main.py
tests/: test_main.py
